--- a/3.JavaMultithreading/src/com/javarush/task/sql/task06/task0608/Условие.md
+++ b/3.JavaMultithreading/src/com/javarush/task/sql/task06/task0608/Условие.md
@@ -1,7 +1,7 @@
 
 ### task0608
 
-Добавь в таблицу customers все колонки таблицы suppliers.
+Добавь в таблицу customers все данные из колонок таблицы suppliers.
 
 
 Требования:
