--- a/2.JavaCore/src/com/javarush/task/jdk13/task34/task3411/Условие.md
+++ b/2.JavaCore/src/com/javarush/task/jdk13/task34/task3411/Условие.md
@@ -1,13 +1,17 @@
 
 ### Приватный родитель
 
-Реализуй метод setPrivateParentField: он должен приватному полю fieldName родительского класса объекта childObject присвоить значение value.
+Реализуй метод setPrivateParentField: 
+он должен приватному полю fieldName 
+родительского класса объекта childObject 
+присвоить значение value.
 Ожидаемый вывод:
 начальная строка
 новая строка
 
 
 Требования:
-1.	Метод setPrivateParentField должен быть реализован согласно условию.
+1.	Метод setPrivateParentField должен
+2. быть реализован согласно условию.
 
 
